grammar.js
    structure: ($) =>
      list($._semicolon, choice($._structure_item, $.package_statement)),

    _structure_item: ($) =>
      choice(
        $.package_declaration,
        $.import_declaration,
        $.using_declaration,
        $.type_definition,
        $.error_type_definition,
        $.struct_definition,
        $.tuple_struct_definition,
        $.enum_definition,
        $.value_definition,
        $.const_definition,
        $.function_definition,
        $.test_definition,
        $.trait_definition,
        $.impl_definition,
        $.impl_declaration,
        $.type_alias_definition,
        $.trait_alias_definition,
        $.function_alias_definition
      ),

    visibility: ($) => choice("priv", seq("pub", optional($.pub_attribute))),

    function_definition: ($) => {
      const signature = seq(
        optional($.attributes),
        optional($.visibility),
        optional($.external_linkage),
        optional("async"),
        "fn",
        optional($.type_parameters),
        $.function_identifier,
        optional("!"),
        optional(alias($._signature_parameters, $.parameters))
      );

      return choice(
        // With body (normal .mbt files)
        seq(
          signature,
          optional(choice(seq("->", $.return_type), $.error_annotation)),
          optional($.where_clause),
          $.block_expression
        ),
        seq(
          signature,
          optional(choice(seq("->", $.return_type), $.error_annotation)),
          "=",
          $.external_source
        ),
        // Without body (.mbti files) - requires return type to disambiguate from ASI
        seq(signature, choice(seq("->", $.return_type), $.error_annotation))
      );
    },

    _signature_parameters: ($) =>
      seq("(", list(",", $._signature_parameter), ")"),

    _arrow_function_body: ($) =>
      choice(
        $._expression,
        $.raise_expression,
        $.assign_expression,
        $.unfinished
      ),

    arrow_function_expression: ($) =>
      choice(
        seq($.parameters, "=>", $._arrow_function_body),
        seq($._lowercase_identifier, "=>", $._arrow_function_body),
        seq("_", "=>", $._arrow_function_body)
      ),

    _expression: ($) => choice($._complex_expression, $._simple_expression),

    _simple_expression: ($) =>
      choice(
        $.atomic_expression,
        $.qualified_identifier,
        $.unary_expression,
        $.struct_expression,
        alias($.nonempty_block_expression, $.block_expression),
        $.anonymous_lambda_expression,
        $.anonymous_matrix_lambda_expression,
        $.constructor_expression,
        $.apply_expression,
        $.array_access_expression,
        $.dot_apply_expression,
        $.dot_dot_apply_expression,
        $.access_expression,
        $.method_expression,
        $.unit_expression,
        $.tuple_expression,
        $.parenthesized_expression,
        $.constraint_expression,
        $.array_expression,
        $.map_expression,
        $.as_expression,
        $.is_expression,
        $.range_expression,
        $.append_expression,
        $.binary_expression,
        $.lexmatch_test_expression,
        $.regex_match_expression,
        "_"
      ),

    _non_pipe_expression: ($) =>
      choice(
        $._non_pipe_simple_expression,
        alias($._non_pipe_binary_expression, $.binary_expression)
      ),

    atomic_expression: ($) => choice($.string_interpolation, $.literal),

    literal: ($) =>
      choice(
        $.boolean_literal,
        $.double_literal,
        $.float_literal,
        $.integer_literal,
        $.byte_literal,
        $.byte_escape_literal,
        $.char_literal,
        $.string_literal,
        $.bytes_literal,
        $.regex_literal,
        $.multiline_string_literal
      ),

    integer_literal: (_) =>
      token(
        choice(
          /[0-9][0-9_]*(UL|U|L|N)?/,
          /0[xX][0-9a-fA-F_]+(UL|U|L|N)?/,
          /0[oO][0-7_]+(UL|U|L|N)?/,
          /0[bB][01_]+(UL|U|L|N)?/
        )
      ),

    // integerPart = /[0-9][_0-9]*/,
    // decimalPart = /[_0-9]+/,
    // exponentPart = /[eE][0-9][_0-9]*/,
    // float_literal: _ => /[0-9][_0-9]*\.[_0-9]*([eE][0-9][_0-9]*)?/,

    string_literal: ($) => choice(seq('"', repeat($.string_fragment), '"')),

    string_fragment: ($) =>
      choice($.unescaped_string_fragment, $.escape_sequence),

    unescaped_string_fragment: (_) =>
      choice(
        token.immediate(prec(1, /\\[^ntbrf'"\\{]/)),
        token.immediate(prec(1, /[^"\\]+/))
      ),

    binary_expression: ($) =>
      choice(
        binaryExpression($._simple_expression),
        prec.left(
          "pipe",
          seq(
            $._simple_expression,
            "|>",
            choice($._simple_expression, $.pipe_arrow_function_expression)
          )
        ),
        prec.left(
          "pipe",
          seq(
            $._non_pipe_expression,
            "<|",
            choice($._non_pipe_expression, $.pipe_arrow_function_expression)
          )
        )
      ),

    block_expression: ($) =>
      seq("{", list($._semicolon, $._statement_expression), "}"),

    matrix_case_clause: ($) =>
      seq(
        list1(",", $._pattern),
        optional($.pattern_guard),
        "=>",
        $._statement_expression
      ),

    constructor_expression: ($) =>
      choice(
        $._uppercase_identifier,
        seq($.package_identifier, $.dot_uppercase_identifier),
        seq($.type_name, "::", $._uppercase_identifier)
      ),

    labelled_argument: ($) => seq($._lowercase_identifier, "=", $._expression),

    forwarded_labelled_argument: ($) => $.label,

    optional_argument: ($) => seq($.optional_label, "=", $._expression),

    argument: ($) =>
      choice(
        $._expression,
        $.labelled_argument,
        $.forwarded_labelled_argument,
        $.optional_argument,
        $.forwarded_optional_argument
      ),

    arguments: ($) => seq("(", list(",", $.argument), ")"),

    apply_expression: ($) =>
      prec.right(
        seq($._simple_expression, optional($.apply_operator), $.arguments)
      ),

    dot_apply_expression: ($) =>
      seq(
        $._simple_expression,
        $.dot_identifier,
        "(",
        list(",", $.argument),
        ")"
      ),

    dot_dot_apply_expression: ($) =>
      seq(
        $._simple_expression,
        $.dot_dot_identifier,
        "(",
        list(",", $.argument),
        ")"
      ),

    access_expression: ($) => seq($._simple_expression, $.accessor),

    accessor: ($) => choice($.dot_identifier, seq(".", /[0-9]+/)),

    unit_expression: (_) => seq("(", ")"),

    tuple_expression: ($) =>
      choice(
        seq(
          "(",
          $._expression,
          repeat1(seq(",", $._expression)),
          optional(","),
          ")"
        ),
        seq("(", $._expression, ",", ")")
      ),

    _statement_expression: ($) =>
      choice(
        $.struct_definition,
        $.enum_definition,
        $.type_definition,
        $.let_expression,
        $.letrec_expression,
        $.and_expression,
        $.let_mut_expression,
        $.guard_expression,
        $.guard_let_expression,
        $.assign_expression,
        $.named_lambda_expression,
        $.named_matrix_expression,
        $.break_expression,
        $.continue_expression,
        $.return_expression,
        $.raise_expression,
        $.defer_expression,
        $.proof_assert_expression,
        $.proof_let_expression,
        $._expression,
        $.unfinished
      ),

    defer_expression: ($) => seq("defer", $._expression),

    assign_operator: ($) => choice("=", "+=", "-=", "*=", "/=", "%="),

    assign_expression: ($) =>
      seq($.left_value, $.assign_operator, $._expression),

    left_value: ($) =>
      choice(
        $.qualified_identifier,
        $.access_expression,
        $.array_access_expression
      ),

    loop_expression: ($) =>
      seq(
        optional($.loop_label),
        "loop",
        strictList1(",", $._expression),
        "{",
        list($._semicolon, $.matrix_case_clause),
        "}"
      ),

    raise_expression: ($) => seq("raise", $._expression),

    // Patterns

    _pattern: ($) =>
      choice($._simple_pattern, $.range_pattern, $.as_pattern, $.or_pattern),

    any_pattern: (_) => "_",

    _type: ($) => choice($._simple_type, $.function_type),

    _simple_type: ($) =>
      choice(
        $.qualified_type_identifier,
        $.apply_type,
        $.tuple_type,
        $.trait_object_type,
        $.parenthesized_type,
        $.option_type,
        "_"
      ),

    type_parameters: ($) => seq("[", list1(",", $.type_identifier), "]"),

    type_annotation: ($) => seq(":", $._type),

    error_annotation: ($) =>
      choice("raise", "noraise", seq("raise", $._type), seq("raise", "?")),

    return_type: ($) =>
      choice(
        $._type,
        seq($._simple_type, "!"),
        seq($._simple_type, "!", $._type),
        seq($._simple_type, "?", $._type),
        seq($._simple_type, $.error_annotation)
      ),

    label: ($) => seq($._lowercase_identifier, "~"),

    optional_label: ($) => seq($._lowercase_identifier, "?"),

    positional_parameter: ($) =>
      seq(choice($._lowercase_identifier, "_"), optional($.type_annotation)),

    parameter: ($) =>
      choice(
        $.positional_parameter,
        $.labelled_parameter,
        $.optional_parameter,
        $.optional_parameter_with_default
      ),

    parameters: ($) => seq("(", list(",", $.parameter), ")"),

    uppercase_identifier: (_) => /[\p{Uppercase_Letter}][_\p{XID_Continue}]*/v,

    _uppercase_identifier: ($) => $.uppercase_identifier,

    lowercase_identifier: (_) =>
      /[_[\p{XID_Start}--\p{Uppercase_Letter}]][_\p{XID_Continue}]*/v,

    _lowercase_identifier: ($) => $.lowercase_identifier,

    identifier: ($) => choice($._uppercase_identifier, $._lowercase_identifier),

    _semicolon: ($) => choice($._automatic_semicolon, ";"),

    dot_identifier: ($) =>
      choice($.dot_lowercase_identifier, $.dot_uppercase_identifier),

    dot_lowercase_identifier: (_) =>
      /\.[_[\p{XID_Start}--\p{Uppercase_Letter}]][_\p{XID_Continue}]*/v,

    dot_dot_identifier: ($) =>
      seq("..", /[_\p{XID_Start}][_\p{XID_Continue}]*/v),

    qualified_identifier: ($) =>
      choice(
        $._lowercase_identifier,
        seq($.package_identifier, $.dot_lowercase_identifier)
      ),

    qualified_type_identifier: ($) =>
      choice($.identifier, seq($.package_identifier, $.dot_identifier)),

    type_name: ($) =>
      choice(
        $.qualified_type_identifier,
        seq("&", $.qualified_type_identifier)
      ),

    function_identifier: ($) =>
      choice(
        $._lowercase_identifier,
        seq($.type_name, "::", $._lowercase_identifier),
        seq($.type_name, "::", $._uppercase_identifier)
      ),

    type_identifier: ($) =>
      choice($.identifier, seq($.identifier, ":", $.constraints)),

    constraints: ($) => list1("+", $.constraint),

    constraint: ($) => $.qualified_type_identifier,

    comment: (_) => /\/\/.*/,
