test/corpus/comment.txt
================================================================================
comment
:language(moonbit)
================================================================================
//
--------------------------------------------------------------------------------

(structure
  (comment))

================================================================================
comment inside block
:language(moonbit)
================================================================================
fn main {
  //
}
--------------------------------------------------------------------------------

(structure
  (function_definition
    (function_identifier
      (lowercase_identifier))
    (block_expression
      (comment))))
