test/corpus/declare.txt
================================================================================
declared functions
================================================================================
declare fn find_byte(target : BytesView, byte : Byte) -> Int

declare pub fn[T : Show] format(value : T) -> String

declare pub async fn Reader::read(self : Reader) -> Int

declare pub fn fallible() -> Int raise
--------------------------------------------------------------------------------

(structure
  (function_definition
    (function_identifier
      (lowercase_identifier))
    (parameters
      (parameter
        (positional_parameter
          (lowercase_identifier)
          (type_annotation
            (qualified_type_identifier
              (identifier
                (uppercase_identifier))))))
      (parameter
        (positional_parameter
          (lowercase_identifier)
          (type_annotation
            (qualified_type_identifier
              (identifier
                (uppercase_identifier)))))))
    (return_type
      (qualified_type_identifier
        (identifier
          (uppercase_identifier)))))
  (function_definition
    (visibility)
    (type_parameters
      (type_identifier
        (identifier
          (uppercase_identifier))
        (constraints
          (constraint
            (qualified_type_identifier
              (identifier
                (uppercase_identifier)))))))
    (function_identifier
      (lowercase_identifier))
    (parameters
      (parameter
        (positional_parameter
          (lowercase_identifier)
          (type_annotation
            (qualified_type_identifier
              (identifier
                (uppercase_identifier)))))))
    (return_type
      (qualified_type_identifier
        (identifier
          (uppercase_identifier)))))
  (function_definition
    (visibility)
    (function_identifier
      (type_name
        (qualified_type_identifier
          (identifier
            (uppercase_identifier))))
      (lowercase_identifier))
    (parameters
      (parameter
        (positional_parameter
          (lowercase_identifier)
          (type_annotation
            (qualified_type_identifier
              (identifier
                (uppercase_identifier)))))))
    (return_type
      (qualified_type_identifier
        (identifier
          (uppercase_identifier)))))
  (function_definition
    (visibility)
    (function_identifier
      (lowercase_identifier))
    (parameters)
    (return_type
      (qualified_type_identifier
        (identifier
          (uppercase_identifier)))
      (error_annotation))))
